-----------------------------------------------------------------------------

 >>> NOTICE!!! <<<

 This file contains SPOILERS, which might ruin your IVAN experience
 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------

July 25 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Fixed an animation bug which occured over memorized stairs outside LOS
  * Fixed a bug in the displacement code

July 24 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Sadism and masochism work quite well
  * Fixed a fatal bug in the head shot code

July 24 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Humanoid.pcx modified, ready for Kahvi's addition of broken armor pics
  * Sadism yet incomplete -> bugs

July 24 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Fixed a bug in the death msg code

July 23 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added new abstraction for locked items
  * Attnam's cellar is now smaller
  * Attnam's cellar has lamps

July 23 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added Kahvi's map of Attnam's cellar partially

July 23 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * punisher added	

July 23 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * coffin added	

July 23 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added some undeground levels to Attnam

July 22 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Fixed a bug in the equipment removal code

July 22 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Bug in taming corrected

July 22 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Charming is now more dependent on attributes etc.
  * Animated bats, spiders & magpie added to char.pcx by Kahvi
  * Mola Mola added to char.pcx by Kahvi
  * Bats and spiders are now animated
