@@ -44,12 +44,12 @@ class globalwindowhandler
   static void Init();
   static void SetQuitMessageHandler(truth (*What)())
   { QuitMessageHandler = What; }
-  static void UpdateTick() { Tick = SDL_GetTicks() / 40; }
+  static ulong UpdateTick() { return Tick = SDL_GetTicks() / 40; }
 #endif
 #ifdef __DJGPP__
   static void Init() { }
   static void SetQuitMessageHandler(truth (*)()) { }
-  static void UpdateTick() { Tick = uclock() * 25 / UCLOCKS_PER_SEC; }
+  static ulong UpdateTick() { return Tick = uclock() * 25 / UCLOCKS_PER_SEC; }
 #endif
  private:
 #ifdef USE_SDL
