@@ -1,3 +1,3 @@
 graphicdir = $(datadir)/ivan/Graphics
-graphic_DATA = Char.pcx Cursor.pcx Effect.pcx Font.pcx FOW.pcx GLTerra.pcx Humanoid.pcx Icon.bmp Item.pcx Menu.pcx OLTerra.pcx Symbol.pcx WTerra.pcx
-EXTRA_DIST = Char.pcx Cursor.pcx Effect.pcx Font.pcx FOW.pcx GLTerra.pcx Humanoid.pcx Icon.bmp Item.pcx Menu.pcx OLTerra.pcx Symbol.pcx WTerra.pcx
+graphic_DATA = Char.pcx Cursor.pcx Effect.pcx Font.pcx FOW.pcx GLTerra.pcx Humanoid.pcx Icon.bmp Item.pcx Menu.pcx OLTerra.pcx Smiley.pcx Symbol.pcx WTerra.pcx
+EXTRA_DIST = Char.pcx Cursor.pcx Effect.pcx Font.pcx FOW.pcx GLTerra.pcx Humanoid.pcx Icon.bmp Item.pcx Menu.pcx OLTerra.pcx Smiley.pcx Symbol.pcx WTerra.pcx
