@@ -7,6 +7,10 @@
 
 -----------------------------------------------------------------------------
 
+July 16 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
+
+  * Added a smiley to the "Unfortunately you died." screen
+
 July 25 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
 
   * Fixed an animation bug which occured over memorized stairs outside LOS
